--- a/package.json
+++ b/package.json
@@ -7,14 +7,23 @@
   "main": "dist/chessx.js",
   "module": "dist/chessx.esm.js",
   "devDependencies": {
+    "@babel/core": "^7.16.5",
     "@rollup/plugin-typescript": "^8.3.0",
+    "@storybook/addon-actions": "^6.4.9",
+    "@storybook/addon-essentials": "^6.4.9",
+    "@storybook/addon-links": "^6.4.9",
+    "@storybook/html": "^6.4.9",
+    "babel-loader": "^8.2.3",
     "rollup": "^2.61.1",
     "tslib": "^2.3.1",
     "typescript": "^4.5.4"
   },
   "scripts": {
     "dev": "rollup -c -w",
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook",
+    "typecheck": "tsc"
   },
   "files": [
     "dist"
