--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
 
     /* Modules */
     "module": "es6",                                  /* Specify what module code is generated. */
-    "rootDir": "src",                                 /* Specify the root folder within your source files. */
+    // "rootDir": "src",                                 /* Specify the root folder within your source files. */
     "moduleResolution": "node",                       /* Specify how TypeScript looks up a file from a given module specifier. */
     // "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
     // "paths": {},                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
@@ -49,7 +49,7 @@
     // "outFile": "./",                                  /* Specify a file that bundles all outputs into one JavaScript file. If `declaration` is true, also designates a file that bundles all .d.ts output. */
     "outDir": "dist",                                 /* Specify an output folder for all emitted files. */
     // "removeComments": true,                           /* Disable emitting comments. */
-    // "noEmit": true,                                   /* Disable emitting files from a compilation. */
+    "noEmit": true,                                   /* Disable emitting files from compilation. Rollup will ignore this. */
     // "importHelpers": true,                            /* Allow importing helper functions from tslib once per project, instead of including them per-file. */
     // "importsNotUsedAsValues": "remove",               /* Specify emit/checking behavior for imports that are only used for types */
     // "downlevelIteration": true,                       /* Emit more compliant, but verbose and less performant JavaScript for iteration. */
@@ -99,5 +99,8 @@
     "skipLibCheck": true                              /* Skip type checking all .d.ts files. */
   },
   "include": ["src"],
+  /* Workaround for generation of nested dist/dist types:
+   * https://github.com/rollup/plugins/tree/master/packages/typescript#declaration-output-with-outputfile
+   */
   "exclude": ["dist"]
 }
