--- a/package.json
+++ b/package.json
@@ -8,13 +8,19 @@
   "module": "dist/chessx.esm.js",
   "devDependencies": {
     "@babel/core": "^7.16.5",
+    "@babel/preset-env": "^7.16.5",
+    "@babel/preset-typescript": "^7.16.5",
     "@rollup/plugin-typescript": "^8.3.0",
     "@storybook/addon-actions": "^6.4.9",
     "@storybook/addon-essentials": "^6.4.9",
     "@storybook/addon-links": "^6.4.9",
     "@storybook/html": "^6.4.9",
+    "@types/jest": "^27.0.3",
+    "babel-jest": "^27.4.5",
     "babel-loader": "^8.2.3",
+    "jest": "^27.4.5",
     "rollup": "^2.61.1",
+    "ts-node": "^10.4.0",
     "tslib": "^2.3.1",
     "typescript": "^4.5.4"
   },
@@ -23,7 +29,8 @@
     "build": "rollup -c",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "test": "jest --watch"
   },
   "files": [
     "dist"
