--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lint-staged": "^12.1.3",
     "prettier": "^2.5.1",
     "rollup": "^2.61.1",
+    "rollup-plugin-image-files": "^1.4.2",
     "rollup-plugin-postcss": "^4.0.2",
     "ts-node": "^10.4.0",
     "tslib": "^2.3.1",
