--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "lint-staged": "^12.1.3",
     "prettier": "^2.5.1",
     "rollup": "^2.61.1",
-    "rollup-plugin-image-files": "^1.4.2",
     "rollup-plugin-postcss": "^4.0.2",
     "ts-node": "^10.4.0",
     "tslib": "^2.3.1",
@@ -54,5 +53,8 @@
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": "eslint --cache --fix",
     "*.{js,jsx,ts,tsx,css,md,json,yml,yaml}": "prettier --write"
+  },
+  "dependencies": {
+    "rollup-plugin-smart-asset": "^2.1.2"
   }
 }
