Add sprite for focused square
Also update config for `svg-sprite` to directly output sprite to `src/`,
without associated CSS.

--- a/svg-sprite-config.json
+++ b/svg-sprite-config.json
@@ -18,6 +18,12 @@
     "namespaceIDs": false
   },
   "mode": {
-    "symbol": true
+    "symbol": {
+      "dest": "src",
+      "sprite": "sprite.svg",
+      "render": {
+        "css": false
+      }
+    }
   }
 }
