--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,12 @@
 {
-  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "prettier"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:jest/recommended",
+    "plugin:jest-dom/recommended",
+    "plugin:testing-library/dom",
+    "prettier"
+  ],
   "env": {
     "browser": true,
     "node": true
