Reorganize order of rows and columns

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@storybook/html": "^6.4.9",
     "@testing-library/dom": "^8.11.1",
     "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.0.3",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
