Add simple interactions (#3)
* Add support for simple board interactions

* Add some tests

* Reorganize order of rows and columns

* Add some styles

* Change to grid layout

* Consolidate styles and Chessboard.ts

* Move to data attributes for square state

* Increase test coverage

* Complete test coverage

* Add focus-visible color

* Add hover and focus styles

* Some naming tweaks

* Roerganize some classes

* Reorganize callbacks

--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@storybook/addon-essentials": "^6.4.9",
     "@storybook/addon-links": "^6.4.9",
     "@storybook/html": "^6.4.9",
+    "@testing-library/dom": "^8.11.1",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.0.3",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
@@ -23,6 +26,10 @@
     "babel-loader": "^8.2.3",
     "eslint": "^8.5.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-jest": "^25.3.2",
+    "eslint-plugin-jest-dom": "^4.0.0",
+    "eslint-plugin-testing-library": "^5.0.1",
+    "fast-check": "^2.20.0",
     "husky": "^7.0.4",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.5",
