Update Storybook to use Webpack 5

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,7 @@
     "plugin:jest/recommended",
     "plugin:jest-dom/recommended",
     "plugin:testing-library/dom",
+    "plugin:storybook/recommended",
     "prettier"
   ],
   "env": {
