--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@storybook/addon-essentials": "^6.4.9",
     "@storybook/addon-interactions": "^6.4.9",
     "@storybook/addon-links": "^6.4.9",
+    "@storybook/builder-webpack5": "^6.4.9",
     "@storybook/html": "^6.4.9",
+    "@storybook/manager-webpack5": "^6.4.9",
     "@storybook/testing-library": "^0.0.7",
     "@testing-library/dom": "^8.11.1",
     "@testing-library/jest-dom": "^5.16.1",
@@ -32,6 +34,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-jest": "^25.3.2",
     "eslint-plugin-jest-dom": "^4.0.0",
+    "eslint-plugin-storybook": "^0.5.5",
     "eslint-plugin-testing-library": "^5.0.1",
     "fast-check": "^2.20.0",
     "husky": "^7.0.4",
