--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "format:fix": "prettier --write .",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
+    "stylelint": "stylelint \"**/*.css\"",
+    "stylelint:fix": "stylelint --fix \"**/*.css\"",
     "types:check": "tsc --noEmit",
     "preview": "vite preview",
     "prepare": "husky install",
@@ -51,11 +53,13 @@
     "jest": "^27.4.5",
     "lint-staged": "^12.1.3",
     "prettier": "^2.5.1",
+    "stylelint-config-standard": "^24.0.0",
     "typescript": "^4.4.4",
     "vite": "^2.7.2"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": "eslint --cache --fix",
-    "*.{js,jsx,ts,tsx,css,md,json,yml,yaml}": "prettier --write"
+    "*.{js,jsx,ts,tsx,css,md,json,yml,yaml}": "prettier --write",
+    "*.{css}": "stylelint --fix"
   }
 }
