--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,5 +1,5 @@
 {
-  "extends": "stylelint-config-standard",
+  "extends": ["stylelint-config-standard", "stylelint-prettier/recommended"],
   "rules": {
     "selector-class-pattern": [
       "^([a-z][a-z0-9]*)(--?[a-z0-9]+)*$",
