Add tests/ directory to tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,5 +28,5 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["./src"]
+  "include": ["./src", "./tests"]
 }
