Add styles and a flip button to demo page, with Tailwind

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -6,6 +6,12 @@
       {
         "message": "Expected class selector to be kebab-case"
       }
+    ],
+    "at-rule-no-unknown": [
+      true,
+      {
+        "ignoreAtRules": ["tailwind", "apply"]
+      }
     ]
   }
 }
