--- a/package.json
+++ b/package.json
@@ -43,9 +43,11 @@
     "husky": "^7.0.4",
     "lint-staged": "^12.1.3",
     "prettier": "^2.5.1",
+    "stylelint": "^14.2.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^24.0.0",
     "stylelint-prettier": "^2.0.0",
+    "tailwindcss": "^3.0.13",
     "typescript": "^4.4.4",
     "vite": "^2.7.2"
   },
