--- a/package.json
+++ b/package.json
@@ -17,30 +17,15 @@
     "stylelint:fix": "stylelint --fix \"**/*.css\"",
     "types:check": "tsc --noEmit",
     "preview": "vite preview",
-    "prepare": "husky install",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "prepare": "husky install"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.7",
-    "@babel/preset-env": "^7.16.8",
-    "@babel/preset-typescript": "^7.16.7",
     "@playwright/test": "^1.17.2",
-    "@storybook/addon-a11y": "^6.4.9",
-    "@storybook/addon-actions": "^6.4.12",
-    "@storybook/addon-essentials": "^6.4.12",
-    "@storybook/addon-links": "^6.4.12",
-    "@storybook/builder-webpack5": "^6.4.12",
-    "@storybook/html": "^6.4.12",
-    "@storybook/manager-webpack5": "^6.4.12",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
     "autoprefixer": "^10.4.2",
-    "babel-loader": "^8.2.3",
-    "css-loader": "^6.5.1",
     "eslint": "^8.5.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-storybook": "^0.5.5",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.3",
     "prettier": "^2.5.1",
