--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -10,7 +10,7 @@
     "at-rule-no-unknown": [
       true,
       {
-        "ignoreAtRules": ["tailwind", "apply"]
+        "ignoreAtRules": ["tailwind", "apply", "layer"]
       }
     ]
   },
