--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "chessx",
+  "name": "g-chess-board",
   "version": "0.0.0",
   "description": "A dependency-free, customizable, and accessible JS chessboard.",
   "author": "Milind Ganjoo",
   "license": "MIT",
-  "main": "dist/chessx.cjs.js",
-  "module": "dist/chessx.es.js",
+  "main": "dist/g-chess-board.cjs.js",
+  "module": "dist/g-chess-board.es.js",
   "files": [
     "dist"
   ],
