--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "main": "dist/gchessboard.cjs.js",
   "module": "dist/gchessboard.es.js",
   "files": [
-    "dist"
+    "dist",
+    "src"
   ],
   "scripts": {
     "dev": "vite",
@@ -40,7 +41,8 @@
     "stylelint-config-standard": "^24.0.0",
     "stylelint-prettier": "^2.0.0",
     "typescript": "^4.4.4",
-    "vite": "^2.7.2"
+    "vite": "^2.7.2",
+    "vite-dts": "^1.0.4"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": "eslint --cache --fix",
