Simplify name and reorganize scripts

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gchessboard",
-  "version": "0.0.0",
-  "description": "A dependency-free, customizable, and accessible JS chessboard.",
+  "version": "0.0.1",
+  "description": "An accessible, customizable and dependency-free chessboard web component.",
   "author": "Milind Ganjoo",
   "license": "MIT",
   "main": "dist/gchessboard.cjs.js",
@@ -14,15 +14,16 @@
     "dev": "vite",
     "dev:host": "vite --host",
     "build": "tsc && vite build",
+    "build:sprites": "svg-sprite --config svg-sprite-config.json pieces/*.svg",
     "test": "playwright test",
     "test:debug": "PWDEBUG=1 playwright test",
-    "format:check": "prettier --check .",
-    "format:fix": "prettier --write .",
-    "lint": "eslint .",
-    "lint:fix": "eslint --fix .",
-    "stylelint": "stylelint \"**/*.css\"",
-    "stylelint:fix": "stylelint --fix \"**/*.css\"",
-    "types:check": "tsc --noEmit",
+    "check:format": "prettier --check .",
+    "check:lint": "eslint .",
+    "check:stylelint": "stylelint \"**/*.css\"",
+    "check:types": "tsc --noEmit",
+    "fix:format": "prettier --write .",
+    "fix:lint": "eslint --fix .",
+    "fix:stylelint": "stylelint --fix \"**/*.css\"",
     "preview": "vite preview",
     "prepare": "husky install"
   },
@@ -40,6 +41,7 @@
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^24.0.0",
     "stylelint-prettier": "^2.0.0",
+    "svg-sprite": "^1.5.3",
     "typescript": "^4.4.4",
     "vite": "^2.7.2",
     "vite-dts": "^1.0.4"
