Move vite/client types to tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,10 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+    /* Type shims for CSS files */
+    "types": ["vite/client"]
   },
   "include": ["./src", "./tests"]
 }
