--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dev": "vite",
     "dev:host": "vite --host",
     "build": "tsc && vite build",
+    "build:api": "wca analyze src/ChessBoardElement.ts --outFile api.md",
     "build:sprites": "svg-sprite --config svg-sprite-config.json pieces/*.svg",
     "test": "playwright test",
     "test:debug": "PWDEBUG=1 playwright test",
@@ -44,7 +45,8 @@
     "svg-sprite": "^1.5.3",
     "typescript": "^4.4.4",
     "vite": "^2.7.2",
-    "vite-dts": "^1.0.4"
+    "vite-dts": "^1.0.4",
+    "web-component-analyzer": "^1.1.6"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": "eslint --cache --fix",
