--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "build:api": "wca analyze src/ChessBoardElement.ts --outFile API.md",
     "build:watch": "vite build --watch",
     "test": "playwright test",
+    "test:ci": "server-test dev:host http-get://localhost:3000/index.html",
     "test:debug": "PWDEBUG=1 playwright test",
     "check:format": "prettier --check .",
     "check:lint": "eslint .",
@@ -38,6 +39,7 @@
     "husky": "^7.0.4",
     "lint-staged": "^12.1.3",
     "prettier": "^2.5.1",
+    "start-server-and-test": "^1.14.0",
     "stylelint": "^14.2.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^24.0.0",
