--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "test": "playwright test",
     "test:ci": "server-test dev:host http-get://localhost:3000/index.html",
     "test:debug": "PWDEBUG=1 playwright test",
+    "check": "npm run check:types && npm run check:format && npm run check:lint && npm run check:stylelint",
     "check:format": "prettier --check .",
     "check:lint": "eslint .",
     "check:stylelint": "stylelint \"**/*.css\"",
@@ -27,10 +28,12 @@
     "fix:lint": "eslint --fix .",
     "fix:stylelint": "stylelint --fix \"**/*.css\"",
     "preview": "vite preview",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "release": "release-it"
   },
   "devDependencies": {
     "@playwright/test": "^1.18.1",
+    "@release-it/keep-a-changelog": "^2.3.0",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
     "autoprefixer": "^10.4.2",
@@ -39,6 +42,7 @@
     "husky": "^7.0.4",
     "lint-staged": "^12.1.3",
     "prettier": "^2.5.1",
+    "release-it": "^14.12.4",
     "start-server-and-test": "^1.14.0",
     "stylelint": "^14.2.0",
     "stylelint-config-prettier": "^9.0.3",
