feat: Replace Vite with Rollup as the bundler
The Vite bundler is restrictive in terms of exporting TypeScript
dependencies. Use Rollup for more control.

- Install Rollup and replace Vite config
- Inline url() assets using PostCSS plugin
- Add `web-dev-server` to replace Vite's server
- Add custom-elements.json
- Add `rollup-plugin-filesize` plugin to production flow
- Add `rollup-plugin-dts` to export types as bundled file

Other changes:
- Rename ChessBoardElement file to be consistent with name of actual class
- Customize types of CustomEvent

--- a/package.json
+++ b/package.json
@@ -4,20 +4,21 @@
   "description": "An accessible, customizable and dependency-free chessboard web component.",
   "author": "Milind Ganjoo",
   "license": "MIT",
-  "main": "dist/gchessboard.cjs.js",
+  "main": "dist/gchessboard.es.js",
   "module": "dist/gchessboard.es.js",
   "files": [
-    "dist",
-    "src"
+    "dist"
   ],
+  "customElements": "custom-elements.json",
   "scripts": {
-    "dev": "vite",
-    "dev:host": "vite --host",
-    "build": "tsc && vite build",
-    "build:api": "wca analyze src/ChessBoardElement.ts --outFile API.md",
-    "build:watch": "vite build --watch",
+    "start": "concurrently -k -r 'npm:build:dev' 'npm:serve'",
+    "build": "rollup -c --environment PRODUCTION",
+    "build:dev": "rollup -c -w",
+    "build:api": "wca analyze src/GChessBoardElement.ts --outFile API.md && wca analyze src/GChessBoardElement.ts --outFile custom-elements.json",
+    "serve": "wds --watch",
+    "serve:ci": "npm run build && wds",
     "test": "playwright test",
-    "test:ci": "server-test dev:host http-get://localhost:3000/index.html",
+    "test:ci": "server-test serve:ci 8000",
     "test:debug": "PWDEBUG=1 playwright test",
     "check": "npm run check:types && npm run check:format && npm run check:lint && npm run check:stylelint",
     "check:format": "prettier --check .",
@@ -27,30 +28,37 @@
     "fix:format": "prettier --write .",
     "fix:lint": "eslint --fix .",
     "fix:stylelint": "stylelint --fix \"**/*.css\"",
-    "preview": "vite preview",
     "prepare": "husky install",
     "release": "release-it"
   },
+  "types": "dist/index.d.ts",
   "devDependencies": {
     "@playwright/test": "^1.18.1",
     "@release-it/keep-a-changelog": "^2.3.0",
-    "@typescript-eslint/eslint-plugin": "^5.8.0",
-    "@typescript-eslint/parser": "^5.8.0",
+    "@rollup/plugin-typescript": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
+    "@web/dev-server": "^0.1.29",
     "autoprefixer": "^10.4.2",
-    "eslint": "^8.5.0",
+    "concurrently": "^7.0.0",
+    "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
     "husky": "^7.0.4",
-    "lint-staged": "^12.1.3",
+    "lint-staged": "^12.3.3",
+    "postcss-url": "^10.1.3",
     "prettier": "^2.5.1",
     "release-it": "^14.12.4",
+    "rollup": "^2.67.1",
+    "rollup-plugin-dts": "^4.1.0",
+    "rollup-plugin-filesize": "^9.1.2",
+    "rollup-plugin-postcss": "^4.0.2",
     "start-server-and-test": "^1.14.0",
     "stylelint": "^14.2.0",
     "stylelint-config-prettier": "^9.0.3",
-    "stylelint-config-standard": "^24.0.0",
+    "stylelint-config-standard": "^25.0.0",
     "stylelint-prettier": "^2.0.0",
-    "typescript": "^4.4.4",
-    "vite": "^2.7.2",
-    "vite-dts": "^1.0.4",
+    "tslib": "^2.3.1",
+    "typescript": "^4.5.5",
     "web-component-analyzer": "^1.1.6"
   },
   "lint-staged": {
