--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,6 @@
     "isolatedModules": true,
 
     /* Emit */
-    "declaration": true,
     "sourceMap": true,
     "noEmit": true,
 
@@ -26,10 +25,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-
-    /* Type shims for CSS files */
-    "types": ["vite/client"]
+    "noFallthroughCasesInSwitch": true
   },
   "include": ["./src", "./tests"]
 }
