fix: Ensure pre-release build always updates custom-elements.json

--- a/.release-it.json
+++ b/.release-it.json
@@ -7,7 +7,7 @@
     "releaseName": "v${version}"
   },
   "hooks": {
-    "after:bump": "npm run build"
+    "after:bump": "npm run build:package"
   },
   "plugins": {
     "@release-it/keep-a-changelog": {
