--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build": "rollup -c --environment PRODUCTION",
     "build:dev": "rollup -c -w",
     "build:api": "wca analyze src/GChessBoardElement.ts --outFile API.md && wca analyze src/GChessBoardElement.ts --outFile custom-elements.json",
-    "build:package": "rm -rf dist && npm run build && npm run build",
+    "build:package": "rm -rf dist && npm run build:api && npm run build",
     "serve": "wds --watch",
     "serve:ci": "npm run build && wds",
     "test": "playwright test",
