--- a/docs/package.json
+++ b/docs/package.json
@@ -1,7 +1,8 @@
 {
   "private": true,
   "scripts": {
-    "build": "eleventy"
+    "build": "eleventy",
+    "serve": "eleventy --serve"
   },
   "devDependencies": {
     "@11ty/eleventy": "^1.0.0"
