--- a/docs/package.json
+++ b/docs/package.json
@@ -1,10 +1,16 @@
 {
   "private": true,
   "scripts": {
-    "build": "eleventy",
-    "serve": "eleventy --serve"
+    "dev": "concurrently npm:dev:css npm:dev:11ty",
+    "dev:11ty": "eleventy --serve",
+    "dev:css": "tailwindcss -i ./css/main.css -o ./_site/css/main.css --watch",
+    "build": "npm run build:css && npm run build:11ty",
+    "build:11ty": "eleventy",
+    "build:css": "tailwindcss -i ./css/main.css -o ./_site/css/main.css --minify"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^1.0.0"
+    "@11ty/eleventy": "^1.0.0",
+    "concurrently": "^7.0.0",
+    "tailwindcss": "^3.0.22"
   }
 }
