--- a/docs/package.json
+++ b/docs/package.json
@@ -10,6 +10,8 @@
   },
   "devDependencies": {
     "@11ty/eleventy": "^1.0.0",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^4.0.0",
+    "@tailwindcss/typography": "^0.5.1",
     "concurrently": "^7.0.0",
     "tailwindcss": "^3.0.22"
   },
