--- a/docs/package.json
+++ b/docs/package.json
@@ -13,6 +13,8 @@
     "@11ty/eleventy-plugin-syntaxhighlight": "^4.0.0",
     "@tailwindcss/typography": "^0.5.1",
     "concurrently": "^7.0.0",
+    "markdown-it": "^12.3.2",
+    "outdent": "^0.8.0",
     "tailwindcss": "^3.0.22"
   },
   "dependencies": {
