--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -14,6 +14,11 @@ jobs:
         with:
           node-version: "12.x"
 
+      - name: Build main library
+        run: |
+          npm ci
+          npm run build
+
       - name: Install dependencies & build
         run: |
           cd docs/
