--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -9,3 +9,5 @@ jobs:
       - uses: actions/checkout@v2
       - name: Changelog enforcer
         uses: dangoslen/changelog-enforcer@v3
+        with:
+          skipLabels: [Skip-Changelog, dependencies]
