Change name for skip-changelog label

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -10,4 +10,4 @@ jobs:
       - name: Changelog enforcer
         uses: dangoslen/changelog-enforcer@v3
         with:
-          skipLabels: [Skip-Changelog, dependencies]
+          skipLabels: [skip-changelog, dependencies]
