--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "start": "concurrently -k -r 'npm:build:dev' 'npm:serve'",
     "build": "rollup -c --environment PRODUCTION",
     "build:dev": "rollup -c -w",
-    "build:api": "wca analyze src/GChessboardElement.ts --outFile docs/src/api.md --inlineTypes && wca analyze src/GChessBoardElement.ts --outFile custom-elements.json --inlineTypes",
+    "build:api": "wca analyze src/GChessBoardElement.ts --format json2 --outFile docs/src/_data/apiSpec.json --inlineTypes",
     "build:package": "rm -rf dist && npm run build:api && npm run build",
     "serve": "wds --watch",
     "serve:ci": "npm run build && wds",
