--- a/docs/package.json
+++ b/docs/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/typography": "^0.5.1",
     "concurrently": "^7.0.0",
     "markdown-it": "^12.3.2",
+    "markdown-it-prism": "^2.2.3",
     "outdent": "^0.8.0",
     "tailwindcss": "^3.0.22"
   },
