--- a/.prettierignore
+++ b/.prettierignore
@@ -4,7 +4,7 @@ playwright-report/
 docs/_site/
 
 # Respect auto-generated formatting from `wca` tool
-api.md
+apiSpec.json
 custom-elements.json
 
 # Auto-downloaded files
