--- a/docs/package.json
+++ b/docs/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/typography": "^0.5.1",
     "@toycode/markdown-it-class": "^1.2.4",
     "concurrently": "^7.0.0",
+    "eleventy-plugin-toc": "^1.1.5",
     "markdown-it": "^12.3.2",
     "markdown-it-anchor": "^8.4.1",
     "markdown-it-prism": "^2.2.3",
