--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "type": "git",
     "url": "https://github.com/mganjoo/gchessboard.git"
   },
+  "type": "module",
   "main": "dist/index.es.js",
   "module": "dist/index.es.js",
   "types": "dist/index.d.ts",
@@ -41,33 +42,33 @@
     "release": "release-it"
   },
   "devDependencies": {
-    "@playwright/test": "^1.18.1",
-    "@release-it/keep-a-changelog": "^2.3.0",
-    "@rollup/plugin-typescript": "^8.3.0",
-    "@typescript-eslint/eslint-plugin": "^5.11.0",
-    "@typescript-eslint/parser": "^5.11.0",
-    "@web/dev-server": "^0.1.29",
-    "autoprefixer": "^10.4.2",
-    "concurrently": "^7.0.0",
-    "eslint": "^8.8.0",
-    "eslint-config-prettier": "^8.3.0",
-    "husky": "^7.0.4",
-    "lint-staged": "^12.3.3",
+    "@playwright/test": "^1.28.1",
+    "@release-it/keep-a-changelog": "^3.1.0",
+    "@rollup/plugin-typescript": "^10.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/parser": "^5.45.0",
+    "@web/dev-server": "^0.1.35",
+    "autoprefixer": "^10.4.13",
+    "concurrently": "^7.6.0",
+    "eslint": "^8.29.0",
+    "eslint-config-prettier": "^8.5.0",
+    "husky": "^8.0.2",
+    "lint-staged": "^13.0.4",
     "postcss-url": "^10.1.3",
-    "prettier": "^2.5.1",
-    "release-it": "^14.12.4",
-    "rollup": "^2.67.1",
-    "rollup-plugin-dts": "^4.1.0",
+    "prettier": "^2.8.0",
+    "release-it": "^15.5.1",
+    "rollup": "^3.5.1",
+    "rollup-plugin-dts": "^5.0.0",
     "rollup-plugin-filesize": "^9.1.2",
     "rollup-plugin-postcss": "^4.0.2",
     "start-server-and-test": "^1.14.0",
-    "stylelint": "^14.2.0",
-    "stylelint-config-prettier": "^9.0.3",
-    "stylelint-config-standard": "^25.0.0",
+    "stylelint": "^14.16.0",
+    "stylelint-config-prettier": "^9.0.4",
+    "stylelint-config-standard": "^29.0.0",
     "stylelint-prettier": "^2.0.0",
-    "tslib": "^2.3.1",
-    "typescript": "^4.5.5",
-    "web-component-analyzer": "^1.1.6"
+    "tslib": "^2.4.1",
+    "typescript": "^4.9.3",
+    "web-component-analyzer": "^2.0.0-next.4"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": "eslint --cache --fix",
