--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gchessboard",
-  "version": "1.0.0-0",
+  "version": "1.0.0",
   "description": "An accessible, customizable and dependency-free chessboard web component.",
   "author": "Milind Ganjoo",
   "homepage": "https://mganjoo.github.io/gchessboard",
