--- a/package.json
+++ b/package.json
@@ -42,33 +42,32 @@
     "release": "release-it"
   },
   "devDependencies": {
-    "@playwright/test": "^1.28.1",
-    "@release-it/keep-a-changelog": "^3.1.0",
-    "@rollup/plugin-typescript": "^10.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.45.0",
-    "@typescript-eslint/parser": "^5.45.0",
-    "@web/dev-server": "^0.1.35",
-    "autoprefixer": "^10.4.13",
-    "concurrently": "^7.6.0",
-    "eslint": "^8.29.0",
-    "eslint-config-prettier": "^8.5.0",
-    "husky": "^8.0.2",
-    "lint-staged": "^13.0.4",
+    "@playwright/test": "^1.39.0",
+    "@release-it/keep-a-changelog": "^4.0.0",
+    "@rollup/plugin-typescript": "^11.1.5",
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
+    "@web/dev-server": "^0.4.0",
+    "autoprefixer": "^10.4.16",
+    "concurrently": "^8.2.2",
+    "eslint": "^8.53.0",
+    "eslint-config-prettier": "^9.0.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.0.2",
     "postcss-url": "^10.1.3",
-    "prettier": "^2.8.0",
-    "release-it": "^15.5.1",
-    "rollup": "^3.5.1",
-    "rollup-plugin-dts": "^5.0.0",
-    "rollup-plugin-filesize": "^9.1.2",
+    "prettier": "^3.0.3",
+    "release-it": "^16.2.1",
+    "rollup": "^4.3.0",
+    "rollup-plugin-dts": "^6.1.0",
+    "rollup-plugin-filesize": "^10.0.0",
     "rollup-plugin-postcss": "^4.0.2",
-    "start-server-and-test": "^1.14.0",
-    "stylelint": "^14.16.0",
-    "stylelint-config-prettier": "^9.0.4",
-    "stylelint-config-standard": "^29.0.0",
-    "stylelint-prettier": "^2.0.0",
-    "tslib": "^2.4.1",
-    "typescript": "^4.9.3",
-    "web-component-analyzer": "^2.0.0-next.4"
+    "start-server-and-test": "^2.0.2",
+    "stylelint": "^15.11.0",
+    "stylelint-config-standard": "^34.0.0",
+    "stylelint-prettier": "^4.0.2",
+    "tslib": "^2.6.2",
+    "typescript": "^5.2.2",
+    "web-component-analyzer": "^2.0.0"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": "eslint --cache --fix",
