--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "fix:format": "prettier --write .",
     "fix:lint": "eslint --fix .",
     "fix:stylelint": "stylelint --fix \"**/*.css\"",
-    "prepare": "husky install",
+    "prepare": "husky",
     "release": "release-it"
   },
   "devDependencies": {
@@ -52,7 +52,7 @@
     "concurrently": "^8.2.2",
     "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.1.0",
-    "husky": "^8.0.3",
+    "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
     "postcss-url": "^10.1.3",
     "prettier": "^3.3.3",
