--- a/package.json
+++ b/package.json
@@ -38,35 +38,35 @@
     "fix:format": "prettier --write .",
     "fix:lint": "eslint --fix .",
     "fix:stylelint": "stylelint --fix \"**/*.css\"",
-    "prepare": "husky install",
+    "prepare": "husky",
     "release": "release-it"
   },
   "devDependencies": {
-    "@playwright/test": "^1.39.0",
-    "@release-it/keep-a-changelog": "^4.0.0",
-    "@rollup/plugin-typescript": "^11.1.5",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0",
+    "@playwright/test": "^1.45.1",
+    "@release-it/keep-a-changelog": "^5.0.0",
+    "@rollup/plugin-typescript": "^11.1.6",
+    "@typescript-eslint/eslint-plugin": "^7.16.0",
+    "@typescript-eslint/parser": "^7.16.0",
     "@web/dev-server": "^0.4.0",
-    "autoprefixer": "^10.4.16",
+    "autoprefixer": "^10.4.19",
     "concurrently": "^8.2.2",
     "eslint": "^8.53.0",
-    "eslint-config-prettier": "^9.0.0",
-    "husky": "^8.0.3",
-    "lint-staged": "^15.0.2",
+    "eslint-config-prettier": "^9.1.0",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.7",
     "postcss-url": "^10.1.3",
-    "prettier": "^3.0.3",
-    "release-it": "^16.2.1",
+    "prettier": "^3.3.3",
+    "release-it": "^17.5.0",
     "rollup": "^4.3.0",
-    "rollup-plugin-dts": "^6.1.0",
+    "rollup-plugin-dts": "^6.1.1",
     "rollup-plugin-filesize": "^10.0.0",
     "rollup-plugin-postcss": "^4.0.2",
     "start-server-and-test": "^2.0.2",
-    "stylelint": "^15.11.0",
-    "stylelint-config-standard": "^34.0.0",
-    "stylelint-prettier": "^4.0.2",
-    "tslib": "^2.6.2",
-    "typescript": "^5.2.2",
+    "stylelint": "^16.7.0",
+    "stylelint-config-standard": "^36.0.1",
+    "stylelint-prettier": "^5.0.1",
+    "tslib": "^2.6.3",
+    "typescript": "^5.5.3",
     "web-component-analyzer": "^2.0.0"
   },
   "lint-staged": {
