--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,5 +1,9 @@
 {
-  "extends": ["stylelint-config-standard", "stylelint-prettier/recommended"],
+  "extends": [
+    "stylelint-config-standard",
+    "stylelint-prettier/recommended",
+    "stylelint-config-idiomatic-order"
+  ],
   "rules": {
     "selector-class-pattern": [
       "^([a-z][a-z0-9]*)(--?[a-z0-9]+)*$",
