--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "rollup-plugin-postcss": "^4.0.2",
     "start-server-and-test": "^2.0.2",
     "stylelint": "^16.7.0",
+    "stylelint-config-idiomatic-order": "^10.0.0",
     "stylelint-config-standard": "^36.0.1",
     "stylelint-prettier": "^5.0.1",
     "tslib": "^2.6.3",
