--- a/package.json
+++ b/package.json
@@ -42,16 +42,17 @@
     "release": "release-it"
   },
   "devDependencies": {
+    "@eslint/js": "^9.7.0",
     "@playwright/test": "^1.45.1",
     "@release-it/keep-a-changelog": "^5.0.0",
     "@rollup/plugin-typescript": "^11.1.6",
-    "@typescript-eslint/eslint-plugin": "^7.16.0",
-    "@typescript-eslint/parser": "^7.16.0",
+    "@types/eslint__js": "^8.42.3",
     "@web/dev-server": "^0.4.0",
     "autoprefixer": "^10.4.19",
     "concurrently": "^8.2.2",
-    "eslint": "^8.53.0",
+    "eslint": "^9.7.0",
     "eslint-config-prettier": "^9.1.0",
+    "globals": "^15.8.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
     "postcss-url": "^10.1.3",
@@ -68,6 +69,7 @@
     "stylelint-prettier": "^5.0.1",
     "tslib": "^2.6.3",
     "typescript": "^5.5.3",
+    "typescript-eslint": "^8.0.0-alpha.44",
     "web-component-analyzer": "^2.0.0"
   },
   "lint-staged": {
