Fix serving for tests

--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "build": "tsc --noEmit && vite build",
     "build:api": "wca analyze src/GChessBoardElement.ts --format json2 --outFile docs/src/_data/apiSpec.json --inlineTypes",
     "build:package": "rm -rf dist && npm run build:api && npm run build",
-    "serve": "vite preview",
-    "serve:ci": "npm run build && vite preview --port 8000",
+    "serve:ci": "npm run build && vite dev --port 8000",
     "test": "playwright test",
     "test:ci": "server-test serve:ci http://localhost:8000",
     "test:debug": "PWDEBUG=1 playwright test",
